--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "WeZZard's blog system",
   "version": "0.0.1",
-  "author": "WeZZard <me@WeZZard.com>",
+  "siteOwner": "WeZZard <me@WeZZard.com>",
   "bugs": {
     "url": "https://github.com/WeZZard/blog/issues"
   },
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-remark-copy-linked-files": "^2.0.5",
@@ -25,6 +26,7 @@
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.10",
+    "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
