--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "WeZZard's blog system",
   "version": "0.0.1",
-  "siteOwner": "WeZZard <me@WeZZard.com>",
+  "author": "WeZZard <me@WeZZard.com>",
   "bugs": {
     "url": "https://github.com/WeZZard/blog/issues"
   },
@@ -14,10 +14,11 @@
     "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.2.0",
