--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,8 +1,3 @@
-files:
-  include: '**/*.sass'
-options:
-  formatter: stylish
-  merge-default-rules: false
-rules:
-  identation:
-    size: 4
+linters:
+  Indentation:
+    width: 4
