--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-transformer-yaml": "^2.1.7",
     "katex": "^0.10.0",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
