--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-sharp": "^2.1.10",
     "gatsby-transformer-yaml": "^2.1.7",
+    "i18n-locales": "0.0.2",
     "katex": "^0.10.0",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
