--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "prettier": "^1.14.2",
-    "react-test-renderer": "^16.7.0"
+    "react-test-renderer": "^16.7.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-css-modules": "^1.3.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
   "keywords": [
