--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "url": "https://github.com/WeZZard/blog/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
+    "@mdx-js/mdx": "^0.16.8",
+    "@mdx-js/tag": "^0.16.8",
     "acorn": "^6.0.5",
+    "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.0.91",
-    "gatsby-image": "^2.0.26",
+    "gatsby": "^2.0.104",
+    "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-feed": "^2.0.8",
-    "gatsby-plugin-google-analytics": "^2.0.9",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-feed": "^2.0.12",
+    "gatsby-plugin-google-analytics": "^2.0.12",
+    "gatsby-plugin-manifest": "^2.0.14",
+    "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-sass": "^2.0.8",
+    "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-katex": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.2.0",
+    "gatsby-remark-prismjs": "^3.2.3",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.16",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-source-filesystem": "^2.0.18",
+    "gatsby-transformer-sharp": "^2.1.12",
     "gatsby-transformer-yaml": "^2.1.7",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.0",
@@ -41,6 +42,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-lifecycles-compat": "^3.0.4",
     "remark-parse": "^5.0.0"
   },
   "devDependencies": {
