--- a/package.json
+++ b/package.json
@@ -10,37 +10,39 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.16.8",
     "@mdx-js/tag": "^0.16.8",
-    "acorn": "^6.0.5",
+    "acorn": "^6.0.6",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.0.104",
+    "gatsby": "^2.0.106",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.14",
+    "gatsby-plugin-manifest": "^2.0.15",
     "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.8",
-    "gatsby-plugin-sharp": "^2.0.18",
+    "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-katex": "^3.0.1",
     "gatsby-remark-prismjs": "^3.2.3",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.18",
-    "gatsby-transformer-sharp": "^2.1.12",
+    "gatsby-transformer-sharp": "^2.1.13",
     "gatsby-transformer-yaml": "^2.1.7",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.0",
+    "mdx-component-autolink-header": "0.0.1",
+    "mdx-utils": "0.0.2",
     "node-sass": "^4.11.0",
+    "prism-react-renderer": "^0.1.5",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-lifecycles-compat": "^3.0.4",
+    "react-live": "^1.12.0",
+    "react-prism": "^4.3.2",
     "remark-parse": "^5.0.0"
   },
   "devDependencies": {
@@ -52,11 +54,13 @@
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "prettier": "^1.14.2",
+    "prettier": "^1.16.2",
     "react-test-renderer": "^16.7.0",
     "stylelint": "^9.10.1",
     "stylelint-config-css-modules": "^1.3.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.5.1"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
   "keywords": [
