--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "acorn": "^6.0.6",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.0.106",
+    "gatsby": "^2.0.111",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.15",
+    "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.8",
-    "gatsby-plugin-sharp": "^2.0.19",
+    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sass": "^2.0.10",
+    "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
+    "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-images": "^2.0.4",
-    "gatsby-remark-katex": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.2.3",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.18",
+    "gatsby-remark-katex": "^3.0.3",
+    "gatsby-remark-prismjs": "^3.2.4",
+    "gatsby-remark-smartypants": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
-    "gatsby-transformer-yaml": "^2.1.7",
+    "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.0",
     "mdx-component-autolink-header": "0.0.1",
@@ -40,26 +40,29 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-katex": "^2.0.2",
+    "react-katex-component": "0.0.9",
     "react-lifecycles-compat": "^3.0.4",
     "react-live": "^1.12.0",
-    "remark-parse": "^5.0.0"
+    "remark-parse": "^5.0.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-preset-gatsby": "^0.1.6",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "prettier": "^1.16.2",
+    "prettier": "^1.16.3",
     "react-test-renderer": "^16.7.0",
     "stylelint": "^9.10.1",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.5.1"
+    "stylelint-scss": "^3.5.2"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
   "keywords": [
