Organizes node packages.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,7 +3,8 @@
         "stylelint-scss"
     ],
     "extends": [
-        "stylelint-config-recommended-scss"
+        "stylelint-config-recommended-scss",
+        "stylelint-config-css-modules"
     ],
     "rules": {
         "indentation": 4
