--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-katex": "^3.0.3",
-    "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-smartypants": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
     "gatsby-transformer-yaml": "^2.1.8",
@@ -41,9 +37,9 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-katex": "^2.0.2",
-    "react-katex-component": "0.0.9",
     "react-lifecycles-compat": "^3.0.4",
     "react-live": "^1.12.0",
+    "remark": "^10.0.1",
     "remark-parse": "^5.0.0",
     "styled-components": "^4.1.3"
   },
@@ -61,7 +57,6 @@
     "stylelint": "^9.10.1",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.5.2"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
