--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-katex": "^3.0.3",
+    "gatsby-remark-props-images": "file:plugins/gatsby-remark-props-images",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.0",
-    "mdx-component-autolink-header": "0.0.1",
     "mdx-utils": "0.0.2",
     "node-sass": "^4.11.0",
     "prism-react-renderer": "^0.1.5",
@@ -41,7 +41,8 @@
     "react-live": "^1.12.0",
     "remark": "^10.0.1",
     "remark-parse": "^5.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "unist-util-visit": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -52,7 +53,7 @@
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "prettier": "^1.16.3",
+    "prettier": "^1.16.4",
     "react-test-renderer": "^16.7.0",
     "stylelint": "^9.10.1",
     "stylelint-config-css-modules": "^1.3.0",
