--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,7 +4,7 @@
     ],
     "extends": [
         "stylelint-config-recommended-scss",
-        "stylelint-config-css-modules"
+        "@comparaonline/stylelint-config-scss-modules"
     ],
     "rules": {
         "indentation": 4
