--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@comparaonline/stylelint-config-scss-modules": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-preset-gatsby": "^0.1.7",
@@ -56,7 +57,6 @@
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.1",
     "stylelint": "^9.10.1",
-    "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.3"
   },
