Refines post styles.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-katex": "^3.0.3",
+    "gatsby-remark-katex-mdx": "file:plugins/gatsby-remark-katex-mdx",
+    "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
     "gatsby-transformer-yaml": "^2.1.8",
@@ -39,6 +40,7 @@
     "react-lifecycles-compat": "^3.0.4",
     "react-live": "^1.12.0",
     "remark": "^10.0.1",
+    "remark-math": "^1.0.5",
     "remark-parse": "^5.0.0",
     "styled-components": "^4.1.3",
     "unist-util-visit": "^1.4.0"
@@ -51,7 +53,6 @@
     "babel-preset-gatsby": "^0.1.7",
     "eslint": "^5.13.0",
     "eslint-plugin-react": "^7.12.4",
-    "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "prettier": "^1.16.4",
