Adds Google Analytics.

--- a/config/config.yml
+++ b/config/config.yml
@@ -62,6 +62,9 @@ site:
     footerMessages:
         - Freiheit ist Wille, Handeln ist Fähigkeit.
 
+GoogleAnalytics:
+    trackingID: UA-57725504-1
+
 contact:
     - service: Email
       identifier: me@wezzard.com
