--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.1.4",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.6",
+    "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
@@ -50,10 +51,10 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-preset-gatsby": "^0.1.7",
-    "eslint": "^5.14.0",
+    "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.2",
     "stylelint": "^9.10.1",
