--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.1.10",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.4.0",
+    "gatsby-plugin-catch-links": "^2.0.11",
     "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-manifest": "^2.0.18",
     "gatsby-plugin-offline": "^2.0.24",
