--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "url": "https://github.com/WeZZard/blog/issues"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@mdx-js/mdx": "^0.16.8",
     "@mdx-js/tag": "^0.16.8",
     "acorn": "^6.1.0",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.10",
+    "gatsby": "^2.1.13",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.4.0",
     "gatsby-plugin-catch-links": "^2.0.11",
@@ -26,7 +31,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-plugin-webmention": "0.0.9",
     "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
-    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-source-filesystem": "^2.0.21",
     "gatsby-transformer-sharp": "^2.1.14",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
