--- a/config/config.yml
+++ b/config/config.yml
@@ -87,6 +87,10 @@ social:
     icon: fontawesome://fab/github
     link: https://github.com/WeZZard
 
+  - name: Email
+    icon: fontawesome://fas/envelope
+    link: mailto:me@wezzard.com
+
   - name: Feed
     icon: fontawesome://fas/rss-square
     link: rss.xml
