--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "acorn": "^6.1.0",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.14",
+    "gatsby": "^2.1.15",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.4.0",
     "gatsby-plugin-catch-links": "^2.0.11",
@@ -35,7 +35,7 @@
     "gatsby-transformer-sharp": "^2.1.14",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
-    "katex": "^0.10.0",
+    "katex": "^0.10.1",
     "mdx-utils": "0.0.2",
     "node-sass": "^4.11.0",
     "prism-react-renderer": "^0.1.5",
@@ -57,8 +57,9 @@
     "@babel/core": "^7.3.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
-    "babel-preset-gatsby": "^0.1.7",
+    "babel-preset-gatsby": "^0.1.8",
     "eslint": "^5.14.1",
+    "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
