Fixes feed link.

--- a/config/config.yml
+++ b/config/config.yml
@@ -86,7 +86,7 @@ social:
 
   - name: Feed
     icon: fontawesome://fas/rss-square
-    link: rss.xml
+    link: /rss.xml
 
 # The pagination config for index pages.
 #
