Refactors the organization of nodes.

--- a/config/config.yml
+++ b/config/config.yml
@@ -63,7 +63,7 @@ site:
     - Freiheit ist Wille, Handeln ist Fähigkeit.
 
 navigation:
-  createsNavigationItemsForCategories: true
+  createsNavigationItemsForCategories: false
 
   overwritingCategoryNavigationItems:
     - name: Uncategorized
