--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "acorn": "^6.1.0",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.15",
+    "gatsby": "^2.1.17",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.4.0",
     "gatsby-plugin-catch-links": "^2.0.11",
     "gatsby-plugin-feed": "^2.0.13",
-    "gatsby-plugin-manifest": "^2.0.18",
+    "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.21",
+    "gatsby-plugin-sharp": "^2.0.22",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-plugin-webmention": "0.0.9",
     "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
-    "gatsby-source-filesystem": "^2.0.21",
+    "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-sharp": "^2.1.14",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
@@ -69,13 +69,15 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sitemap": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.3",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
-    "stylelint-scss": "^3.5.3"
+    "stylelint-scss": "^3.5.4"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
   "keywords": [
