--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-katex": "^2.0.2",
     "react-lifecycles-compat": "^3.0.4",
     "react-live": "^1.12.0",
-    "react-responsive": "^6.1.1",
+    "react-media": "^1.9.2",
     "remark": "^10.0.1",
     "remark-math": "^1.0.5",
     "remark-parse": "^5.0.0",
