--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-test-renderer": "^16.8.3",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
+    "stylelint-prettier": "^1.0.6",
     "stylelint-scss": "^3.5.4"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
