--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@mdx-js/mdx": "^0.16.8",
     "@mdx-js/tag": "^0.16.8",
-    "acorn": "^6.1.0",
+    "acorn": "^6.1.1",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.17",
-    "gatsby-image": "^2.0.29",
+    "gatsby": "^2.1.19",
+    "gatsby-image": "^2.0.30",
     "gatsby-mdx": "^0.4.0",
-    "gatsby-plugin-catch-links": "^2.0.11",
-    "gatsby-plugin-feed": "^2.0.13",
-    "gatsby-plugin-manifest": "^2.0.19",
+    "gatsby-plugin-catch-links": "^2.0.12",
+    "gatsby-plugin-feed": "^2.0.14",
+    "gatsby-plugin-manifest": "^2.0.20",
     "gatsby-plugin-offline": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.22",
+    "gatsby-plugin-sharp": "^2.0.23",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-plugin-webmention": "0.0.9",
     "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
-    "gatsby-source-filesystem": "^2.0.22",
-    "gatsby-transformer-sharp": "^2.1.14",
+    "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-sharp": "^2.1.15",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.1",
     "mdx-utils": "0.0.2",
     "node-sass": "^4.11.0",
-    "prism-react-renderer": "^0.1.5",
+    "prism-react-renderer": "^0.1.6",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -54,13 +54,13 @@
     "unist-util-visit": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.3.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "babel-preset-gatsby": "^0.1.8",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.0",
     "eslint-config-node": "^4.0.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "^2.16.0",
@@ -101,9 +101,9 @@
     "lint": "npm run eslint; npm run stylelint;",
     "format": "npm run format-check",
     "test": "jest",
-    "develop": "gatsby develop -H 0.0.0",
-    "serve": "gatsby serve -H 0.0.0",
-    "build": "gatsby build",
+    "develop": "./clear_cache; gatsby develop -H 0.0.0.0",
+    "serve": "gatsby serve -H 0.0.0.0",
+    "build": "./clear_cache; gatsby build",
     "start": "npm run develop"
   }
 }
