Refactors responsive images.

--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@mdx-js/mdx": "^0.16.8",
-    "@mdx-js/tag": "^0.16.8",
+    "@mdx-js/mdx": "^1.0.0-alpha.1",
+    "@mdx-js/tag": "^1.0.0-alpha.1",
     "acorn": "^6.1.1",
+    "core-js": "^2.6.5",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.19",
-    "gatsby-image": "^2.0.30",
-    "gatsby-mdx": "^0.4.0",
+    "gatsby": "^2.1.24",
+    "gatsby-image": "^2.0.31",
+    "gatsby-mdx": "^0.5.2",
     "gatsby-plugin-catch-links": "^2.0.12",
     "gatsby-plugin-feed": "^2.0.14",
-    "gatsby-plugin-manifest": "^2.0.20",
+    "gatsby-plugin-manifest": "^2.0.22",
     "gatsby-plugin-offline": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.7",
+    "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.23",
+    "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-plugin-webmention": "0.0.9",
-    "gatsby-remark-primitive-images": "file:plugins/gatsby-remark-primitive-images",
+    "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-remark-mdx-images": "file:plugins/gatsby-remark-mdx-images",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-sharp": "^2.1.15",
     "gatsby-transformer-yaml": "^2.1.8",
     "i18n-locales": "0.0.2",
     "katex": "^0.10.1",
-    "mdx-utils": "0.0.2",
     "node-sass": "^4.11.0",
     "prism-react-renderer": "^0.1.6",
     "prismjs": "^1.15.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-katex": "^2.0.2",
     "react-lifecycles-compat": "^3.0.4",
