--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/webstorm
+/plugins/gatsby-remark-primitive-images/index.js
