Fixes mdx and gatsby-mdx's version.

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@mdx-js/mdx": "^1.0.0-alpha.1",
-    "@mdx-js/tag": "^1.0.0-alpha.1",
+    "@mdx-js/mdx": "0.20.3",
+    "@mdx-js/tag": "0.20.3",
     "acorn": "^6.1.1",
     "core-js": "^2.6.5",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
     "gatsby": "^2.1.24",
     "gatsby-image": "^2.0.31",
-    "gatsby-mdx": "^0.5.2",
+    "gatsby-mdx": "^0.4.2",
     "gatsby-plugin-catch-links": "^2.0.12",
     "gatsby-plugin-feed": "^2.0.14",
     "gatsby-plugin-manifest": "^2.0.22",
