--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@mdx-js/mdx": "0.20.3",
-    "@mdx-js/tag": "0.20.3",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
     "acorn": "^6.1.1",
     "core-js": "^2.6.5",
     "create-react-context": "^0.2.3",
     "debug": "^4.1.1",
-    "gatsby": "^2.1.24",
+    "gatsby": "^2.1.27",
     "gatsby-image": "^2.0.31",
     "gatsby-mdx": "^0.4.2",
     "gatsby-plugin-catch-links": "^2.0.12",
@@ -73,8 +73,10 @@
     "gatsby-plugin-sitemap": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
+    "postcss-env-function": "^2.0.2",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.3",
+    "sass": "^1.17.2",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-prettier": "^1.0.6",
@@ -104,6 +106,7 @@
     "develop": "./clear_cache; gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve -H 0.0.0.0",
     "build": "./clear_cache; gatsby build",
-    "start": "npm run develop"
+    "start": "npm run develop",
+    "build-and-serve": "./clear_cache; gatsby build; gatsby serve -H 0.0.0.0"
   }
 }
