--- a/config/config.yml
+++ b/config/config.yml
@@ -62,7 +62,7 @@ site:
     - Designing UX
 
   footerMessages:
-    - Freiheit ist Wille, Handeln ist Fähigkeit.
+    - Freiheit ist Wille, Handeln ist Fähigkeit, Mut ist durch Zeit ohne Angst zu taufen.
 
 navigation:
   createsNavigationItemsForCategories: false
