--- a/package.json
+++ b/package.json
@@ -8,79 +8,73 @@
     "url": "https://github.com/WeZZard/blog/issues"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-brands-svg-icons": "^5.7.2",
-    "@fortawesome/free-regular-svg-icons": "^5.7.2",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.20.3",
-    "acorn": "^6.1.1",
-    "core-js": "^2.6.5",
-    "create-react-context": "^0.2.3",
-    "debug": "^4.1.1",
-    "gatsby": "^2.1.27",
-    "gatsby-image": "^2.0.31",
-    "gatsby-mdx": "^0.4.2",
-    "gatsby-plugin-catch-links": "^2.0.12",
-    "gatsby-plugin-feed": "^2.0.14",
-    "gatsby-plugin-manifest": "^2.0.22",
-    "gatsby-plugin-offline": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.8",
-    "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.25",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "acorn": "^8.7.1",
+    "core-js": "^3.22.4",
+    "debug": "^4.3.4",
+    "gatsby": "^4.13.1",
+    "gatsby-plugin-catch-links": "^4.13.0",
+    "gatsby-plugin-feed": "^4.13.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-mdx": "^3.13.0",
+    "gatsby-plugin-offline": "^5.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sass": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-mdx-images": "file:plugins/gatsby-remark-mdx-images",
-    "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-sharp": "^2.1.15",
-    "gatsby-transformer-yaml": "^2.1.8",
-    "i18n-locales": "0.0.2",
-    "katex": "^0.10.1",
-    "node-sass": "^4.11.0",
-    "prism-react-renderer": "^0.1.6",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "react-katex": "^2.0.2",
+    "gatsby-remark-copy-linked-files": "^5.13.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
+    "gatsby-transformer-yaml": "^4.13.0",
+    "i18n-locales": "^0.0.5",
+    "katex": "^0.15.3",
+    "node-sass": "^6.0.1",
+    "prism-react-renderer": "^1.3.1",
+    "prismjs": "^1.28.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-lifecycles-compat": "^3.0.4",
-    "react-live": "^1.12.0",
-    "react-media": "^1.9.2",
-    "remark": "^10.0.1",
-    "remark-math": "^1.0.5",
-    "remark-parse": "^5.0.0",
-    "styled-components": "^4.1.3",
-    "unist-util-visit": "^1.4.0"
+    "react-live": "^2.4.1",
+    "react-media": "^1.10.0",
+    "remark": "^14.0.2",
+    "remark-math": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "styled-components": "^5.3.5",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
-    "babel-preset-gatsby": "^0.1.8",
-    "eslint": "^5.15.0",
-    "eslint-config-node": "^4.0.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sitemap": "^2.0.6",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
-    "postcss-env-function": "^2.0.2",
-    "prettier": "^1.16.4",
-    "react-test-renderer": "^16.8.3",
-    "sass": "^1.17.2",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylelint-prettier": "^1.0.6",
-    "stylelint-scss": "^3.5.4"
+    "@types/mdx-js__react": "^1.5.5",
+    "@types/node": "^16.11.27",
+    "@types/react": "^17.0.39",
+    "@types/react-is": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "babel-plugin-typescript-to-proptypes": "^2.0.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-stylelint": "^15.0.0",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gatsby-plugin-dts-css-modules": "^2.2.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "styled-components": "^5.3.3",
+    "stylelint": "^14.5.3",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-scss": "^4.1.0",
+    "ts-node": "^10.6.0"
   },
   "homepage": "https://github.com/WeZZard/blog#readme",
   "keywords": [
