Add flexible redirect Edge Function: any */l/:code → same path with ?utm_campaign=:code; register function on all paths

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
 [build]
   publish = "public"
 
+[[edge_functions]]
+  function = "flex_redirect"
+  path = "/*"
+
 ## Branded short links on this domain → append single-parameter utm_campaign on same host
 ## Examples:
 ##   /l/rdt.claudecode       → /?utm_campaign=rdt.claudecode
